--- a/src/main/resources/templates/adddog.html
+++ b/src/main/resources/templates/adddog.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />	
 </head>
 
-<body>
+<body style="background-color: #e6ffff;">
 	<h2>Lisää koira</h2>
 	<div>
 		<form th:object="${dog}" th:action="@{save}" action="#" method="post">
@@ -31,7 +31,7 @@
 			</select>
 					
 		<div style="clear: both; display: block; height: 10px;" ></div>
-			<input type="submit" value="Save"></input>
+			<input type="submit" value="Tallenna"></input>
 	</form>
 	</div>
 </body>
