--- a/src/main/resources/templates/adddog.html
+++ b/src/main/resources/templates/adddog.html
@@ -12,7 +12,7 @@
 		<form th:object="${dog}" th:action="@{save}" action="#" method="post">
 			<label for="name">Nimi</label>
 			<input type="text" id="name" th:field="*{name}" />
-			<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nimen täytyy sisältää 3-40 merkkiä</div>
+			<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<label for="gender">Sukupuoli</label>
 			<input type="text" th:field="*{gender}" />
@@ -22,7 +22,7 @@
 			<div style="clear: both; display: block; height: 10px;" ></div>
 			<label for="microship">Mikrosiru</label>
 			<input type="text" th:field="*{microship}" />
-			<div th:if="${#fields.hasErrors('microship')}" th:errors="*{microship}">Mikrosirun numero ei voi olla tyhjä</div>
+			<div th:if="${#fields.hasErrors('microship')}" th:errors="*{microship}"></div>
 			<div style="clear: both; display: block; height: 10px;" ></div>
 			
 			<label for="kennel">Kenneli</label>
